# kombu-solace

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  MEMORY.md  PLAN.md  RELEASE.md  RESEARCH.md  SOURCE_NOTES.md  SUPPORT_MATRIX.md  TESTING.md
kombu_solace/: __init__.py  adapter.py  config.py  errors.py  management.py  naming.py  serialization.py  transport.py  wildcards.py
tests/: conftest.py
tests/integration/: test_broker_smoke.py  test_celery_smoke.py  test_celery_worker_interrupt.py
tests/performance/: test_broker_performance.py
tests/unit/: test_ack_reject.py  test_adapter.py  test_config.py  test_consume.py  test_error_mapping.py  test_lifecycle.py  test_management.py  test_management_fallback.py  test_naming.py  test_registration.py  test_routing.py  test_serialization.py  test_transport_edges.py  test_wildcards.py
