[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kombu-solace"
version = "0.0.0"
description = "Kombu transport for Solace PubSub+"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "kombu-solace contributors"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Celery",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "kombu>=5.3",
  "solace-pubsubplus>=1.11",
]

[project.urls]
Homepage = "https://github.com/kswaroop1/kombu-solace"
Repository = "https://github.com/kswaroop1/kombu-solace"
Issues = "https://github.com/kswaroop1/kombu-solace/issues"

[project.optional-dependencies]
test = [
  "pytest>=8",
  "coverage[toml]>=7",
  "celery>=5.3",
]
perf = [
  "pytest-benchmark>=4",
]
dev = [
  "pytest>=8",
  "coverage[toml]>=7",
  "celery>=5.3",
  "pytest-benchmark>=4",
  "build>=1.2",
  "twine>=5",
]

[tool.setuptools.packages.find]
include = ["kombu_solace*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "integration: any test that requires external services",
  "broker_integration: tests that require a configured Solace broker",
  "celery_integration: tests that require Celery workers with a Solace broker",
  "performance: opt-in benchmark and soak tests",
]

[tool.coverage.run]
branch = true
source = ["kombu_solace"]

[tool.coverage.report]
show_missing = true
skip_covered = true
